--- a/ravibha-mod1/index.html
+++ b/ravibha-mod1/index.html
@@ -1,26 +1,29 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="LunchCheck">
   <head>
     <title>Lunch Checker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <script src="/assets/angular.min.js"></script>
+    <script src="app.js"></script>
     <style>
       .message { font-size: 1.3em; font-weight: bold; }
     </style>
   </head>
 <body>
-   <div class="container">
+   <div class="container" ng-controller='LunchCheckController'>
      <h1>Lunch Checker</h1>
      <div class="form-group">
-       <input id="lunch-menu" type="text"
+       <input id="lunch-menu" type="text" ng-style={"border-color":messageColor}
         placeholder="list comma separated dishes you usually have for lunch"
-        class="form-control">
+        class="form-control" ng-model="commaSeparatedDishes">
      </div>
+     <div>* Empty items are NOT included in the total count</div><br />
      <div class="form-group">
-             <button class="btn btn-default">Check If Too Much</button>
+             <button ng-click="displayProperMessage(commaSeparatedDishes)" class="btn btn-default">Check If Too Much</button>
      </div>
-     <div class="form-group message">
-           <!-- Your message can go here. -->
+     <div ng-style={"color":messageColor} class="form-group message">
+           {{message}}<!-- Your message can go here. -->
      </div>
    </div>
 
