--- a/ravibha-mod3/index.html
+++ b/ravibha-mod3/index.html
@@ -7,20 +7,21 @@
     <link rel="stylesheet" href="styles/styles.css">
 	  <script src="assets/angular.min.js"></script>
     <script src="app.js"></script>
+    <script src="foundItemsDirective.js"></script>
   </head>
   <body>
-   <div class="container">
+   <div class="container" ng-controller="NarrowItDownController as narrowItDownCtrl">
     <h1>Narrow Down Your Chinese Menu Choice</h1>
 
     <div class="form-group">
-      <input type="text" placeholder="search term" class="form-control">
+      <input ng-model="searchText" type="text" placeholder="search term" class="form-control">
     </div>
     <div class="form-group narrow-button">
-      <button class="btn btn-primary">Narrow It Down For Me!</button>
+      <button ng-click="narrowItDownCtrl.getMatchedMenuItems(searchText)" class="btn btn-primary">Narrow It Down For Me!</button>
     </div>
 
-    <!-- found-items should be implemented as a component -->
-    <found-items found-items="...." on-remove="...."></found-items>
+    <found-items menuitems="narrowItDownCtrl.foundItems" displayerror="narrowItDownCtrl.displayError" on-remove="narrowItDownCtrl.removeItem(index)"></found-items>    
+
   </div>
 </body>
 </html>
