--- a/ravibha-mod4/categories.template.html
+++ b/ravibha-mod4/categories.template.html
@@ -1,8 +1,4 @@
-<div ngController="categoryController as categoryCtrl">
-  Displaying all categories in the menu
-  <ul>
-    <li ng-repeat="category in $ctrl.inputCategories">
-
-    </li>
-  </ul>
+<!-- <div id="list" ng-controller='CategoriesController as categoryCtrl'> -->
+<div>
+  <categories input-categories="categoryCtrl.categories"></categories>
 </div>
