--- a/ravibha-mod4/index.html
+++ b/ravibha-mod4/index.html
@@ -9,21 +9,23 @@
     <script src="assets/angular-ui-router.min.js"></script>
 
     <!-- Modules -->
-    <script src="menuapp.module.js"></script>
     <script src="data.module.js"></script>
+    <script src="menuapp.module.js"></script>
+
 
     <script src="routes.js"></script>
 
     <script src="menudata.service.js"></script>
+    <script src="categories.controller.js"></script>
     <script src="categories.component.js"></script>
+    <script src="items.controller.js"></script>
     <script src="items.component.js"></script>
 
   </head>
   <body>
    <div class="container">
-    <h1>Master detail pair demo</h1>
     <ui-view></ui-view>
-    
+
   </div>
 </body>
 </html>
