--- a/ravibha-mod5/index.html
+++ b/ravibha-mod5/index.html
@@ -124,7 +124,7 @@
     <script src="src/common/loading/loading.component.js"></script>
     <script src="src/common/loading/loading.interceptor.js"></script>
     <script src="src/common/menu.service.js"></script>
-    <script src="src/common/CommonDataService.js"></script>
+    <script src="src/common/common.data.service.js"></script>
 
     <!-- Public Module -->
     <script src="src/public/public.module.js"></script>
